crates/data-dict/tests/snapshots/validate_spec__s12_wrong_value_type.snap
---
source: crates/data-dict/tests/validate_spec.rs
assertion_line: 439
expression: "failing_diagnostic(\"spec/s12-wrong-value-type.yaml\")"
---
Error: [S12]
    ╭─[ spec/s12-wrong-value-type.yaml:13:23 ]
    │
 13 │         examples: [1, two, 3]
    │                       ─┬─  
    │                        ╰─── column `t.count` has type `number` but its `examples` value `two` is a string; expected a number
────╯
